scripts/nullaway/annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8.txt
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlScapePlugin.java:46: error: [NullAway] initializer method does not guarantee @NonNull field prefs (line 44) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SparqlScapePlugin() throws Exception{
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:95: error: [NullAway] dereferenced expression row.get("pred") is @Nullable
				String pred = row.get("pred").getURI() ;
				                             ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:297: error: [NullAway] dereferenced expression row.get(dstName) is @Nullable
							if ( row.get(dstName).isURI() )
							                     ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:300: error: [NullAway] dereferenced expression row.getLiteral(dstName) is @Nullable
								dstURI = row.getLiteral(dstName).toString();
								                                ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparqlscape/SparqlInterface.java:364: error: [NullAway] dereferenced expression nsMap is @Nullable
				String url = nsMap.get( searchCol ) + varMap.get(searchCol);
				                  ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/SparqlData.java:42: error: [NullAway] dereferenced expression value is @Nullable
		return value.compareTo(other.value);
		            ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/Client.java:91: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return outList;
		^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/Row.java:14: error: [NullAway] dereferenced expression get(colName) is @Nullable
		return get(colName).isURI();
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/Row.java:18: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return get(colName);
		^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/sparql/Row.java:22: error: [NullAway] dereferenced expression get(colName) is @Nullable
		return get(colName).toString();
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:79: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:146: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return toJSONArray(new JSONTokener(string));
        ^
    (see http://t.uber.com/nullaway )
../annotator/url47087446e9_kellrott_SparqlScape_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:210: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
13 errors
